(doc): adding ListLobbies to swagger
